--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -3,9 +3,14 @@
 		<div class="well">
 			<p>
   			<%= @pin.description %>
-  			<%= link_to 'Edit', edit_pin_path(@pin) %> |
+  		</p>
+  		<p>
+  			<%= @pin.user.name %>
+  		</p>
+  			<% if current_user == @pin.user %>
+  				<%= link_to 'Edit', edit_pin_path(@pin) %> |
+  			<% end %>
 				<%= link_to 'Back', pins_path %>
-			</p>
 		</div>
 	</div>
 </div>
