--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.full_error :image_content_type, class: "alter alert-error" %>
 
   	<%= f.input :image, label: "Upload an image" %>
+  	<%= f.input :image_remote_url, lable: "or enter a URL" %>
     <%= f.input :description, as: :text, input_html: { rows: "3" } %>
 
   <div class="form-actions">
