--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,6 @@
 <% unless user_signed_in? %>
 <div class="hero-unit">
-	<h1>Welcome to One Month Rails</h1>
+	<h1>Welcome to Anne's One Month Rails Class Project</h1>
 	<p>
 			You've found the home page for the 
 			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
