fixed small error on back button

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 	<div class="footer"> 
 		<small>
+			Anne's first app project
 			<%= link_to "Class One Month Rails", "http://onemonthrails.com" %>
 			by <%= link_to "Professor Mattan Griffel", "http://mattangriffel.com" %>
 		</small>
