--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,5 +3,5 @@
 	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
 	is a project to teach 
 	<%= link_to "Ruby On Rails", "http://rubyonrails.org" %> 
-	in one month. This is the sample application.
+	in one month. This is the sample application for my first coding class.
 <p>
